# bottlerocket-ootb-example

./: .gitignore  Makefile  README.md  Twoliter.toml
sources/: Cargo.toml  deny.toml
sources/settings-defaults/ootb-k8s/: Cargo.toml
sources/settings-defaults/ootb-k8s/defaults.d/: ootb-k8s.toml
sources/settings-plugins/ootb-k8s/: Cargo.toml
sources/settings-plugins/ootb-k8s/src/: lib.rs
variants/: Cargo.toml
variants/ootb-k8s-1.29/: Cargo.toml
