[package]
name = "ootb-k8s-1_29"
version = "0.1.0"
edition = "2021"
publish = false
build = "../build.rs"

[package.metadata.build-variant.image-layout]
partition-plan = "unified"

[package.metadata.build-variant.image-features]
grub-set-private-var = true
uefi-secure-boot = true
xfs-data-partition = true
systemd-networkd = true
in-place-updates = false

[package.metadata.build-variant]
kernel-parameters = [
    "console=tty0",
    "console=ttyS0,115200n8",
    "net.ifnames=0",
    "netdog.default-interface=eth0:dhcp4,dhcp6?",
    "quiet",
]
included-packages = [
# core
    "release",
    "kernel-6.1",
# customizations
    "ootb-release",

# k8s
    "cni",
    "cni-plugins",
    "kubelet-1.29",
    "aws-iam-authenticator",
]

[lib]
path = "../variants.rs"

[build-dependencies]
ootb-release.path = "../../packages/ootb-release"
settings-defaults.path = "../../packages/settings-defaults"
settings-plugins.path = "../../packages/settings-plugins"
settings-migrations-stub.path = "../../packages/settings-migrations-stub"
